--- a/src/sections/supplyDetails.module.css
+++ b/src/sections/supplyDetails.module.css
@@ -48,3 +48,9 @@
 .section > ul > li + li {
   border-left: 1px dashed #876cff;
 }
+
+.section > img {
+  position: absolute;
+  top: 25px;
+  left: 60px;
+}
