--- a/src/sections/home.module.css
+++ b/src/sections/home.module.css
@@ -4,6 +4,11 @@
   min-height: 100vh;
   width: 100%;
   position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 98px 0 85px;
 }
 
 .section::after {
@@ -15,4 +20,40 @@
   right: 0;
   min-height: 273px;
   background: url(../assets/png/home-bottom-effect.png) repeat-x bottom;
+}
+
+.section > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+  list-style: none;
+  padding-inline-start: 0;
+  margin: 0;
+}
+
+.section > ul > li {
+  display: block;
+}
+
+.section > ul > li > a {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  justify-content: center;
+  background-color: white;
+  height: 46px;
+  width: 178px;
+  border-radius: 24px;
+  color: #212121;
+  font-family: Syne;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  align-items: center;
+  box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.75);
+}
+
+.section > ul > li > a > img {
+  width: 20px;
+  height: 20px;
 }
