--- a/src/sections/modal.module.css
+++ b/src/sections/modal.module.css
@@ -7,21 +7,21 @@
   left: 0;
   backdrop-filter: blur(12.5px);
   z-index: +1000;
+  overflow: auto;
+  padding: 100px 0;
 }
 
 .modal {
   background: #0d0d0f url(../assets/webp/modal-bg.webp) no-repeat top center;
   max-width: 850px;
-  max-height: 820px;
+  min-height: 820px;
   border-radius: 50px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
+  box-shadow: 0 10px 20px 10px rgba(0, 0, 0, 0.75);
 }
 
 .title {
@@ -79,4 +79,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.description {
+  font-family: Syne;
+  font-size: 20px;
+  font-weight: 600;
+  color: #bc4bff;
+  padding: 0 80px 50px;
+}
+
+.description > strong {
+  display: block;
+  font-size: 28px;
+  text-align: center;
+  color: white;
 }
