--- a/src/sections/supply.module.css
+++ b/src/sections/supply.module.css
@@ -23,3 +23,9 @@
   color: white;
   padding-bottom: 108px;
 }
+
+.pieChart {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
