add & update styles for responsive

--- a/src/sections/footer.module.css
+++ b/src/sections/footer.module.css
@@ -6,5 +6,5 @@
   text-align: center;
   color: white;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 22px 0 32px;
+  padding: 22px 30px 32px;
 }
