--- a/src/sections/home.module.css
+++ b/src/sections/home.module.css
@@ -57,3 +57,18 @@
   width: 20px;
   height: 20px;
 }
+
+@media only screen and (max-width: 1024px) {
+  .section {
+    padding: 0 10px;
+  }
+
+  .section > img {
+    width: 50%;
+  }
+
+  .section > ul > li > a {
+    width: auto;
+    padding: 0 30px;
+  }
+}
