--- a/src/sections/saleDetails.module.css
+++ b/src/sections/saleDetails.module.css
@@ -47,3 +47,10 @@
   color: #876cff;
   padding: 13px 0 42px 0;
 }
+
+@media only screen and (max-width: 1024px) {
+  .section {
+    padding-bottom: 20px;
+    margin: 0 auto;
+  }
+}
