--- a/src/sections/saleTimer.module.css
+++ b/src/sections/saleTimer.module.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-inline-start: 0;
   gap: 60px;
 }
 
@@ -56,4 +57,27 @@
 
 .nowrap {
   white-space: nowrap !important;
+}
+
+@media only screen and (max-width: 1024px) {
+  .section {
+    flex-direction: column;
+  }
+
+  .title {
+    font-size: 60px;
+    line-height: 54px;
+  }
+
+  .timer {
+    gap: 10px;
+  }
+
+  .timer > li > span:first-child {
+    font-size: 40px;
+  }
+
+  .timer > li > span:last-child {
+    font-size: 14px;
+  }
 }
