--- a/src/sections/supply.module.css
+++ b/src/sections/supply.module.css
@@ -29,3 +29,46 @@
   flex-direction: row;
   justify-content: flex-end;
 }
+
+.section > img {
+  position: absolute;
+  top: 25px;
+  left: 60px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .title {
+    font-size: 60px;
+    line-height: 54px;
+  }
+
+  .totalSupply {
+    font-size: 24px;
+  }
+
+  .section > img {
+    position: relative;
+    top: unset;
+    left: unset;
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .pieChart {
+    display: block;
+  }
+
+  .pieChart > img {
+    display: block;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .title {
+    font-size: 44px;
+    line-height: 34px;
+  }
+}
