--- a/src/sections/supplyDetails.module.css
+++ b/src/sections/supplyDetails.module.css
@@ -49,8 +49,13 @@
   border-left: 1px dashed #876cff;
 }
 
-.section > img {
-  position: absolute;
-  top: 25px;
-  left: 60px;
+@media only screen and (max-width: 1024px) {
+  .section > ul {
+    flex-direction: column;
+  }
+
+  .section > ul > li + li {
+    border-left: 0;
+    border-top: 1px dashed #876cff;
+  }
 }
