--- a/src/sections/supply.module.css
+++ b/src/sections/supply.module.css
@@ -30,10 +30,16 @@
   justify-content: flex-end;
 }
 
+.pieChart > img {
+  display: block;
+  max-width: 100%;
+}
+
 .section > img {
   position: absolute;
   top: 25px;
   left: 60px;
+  z-index: -1;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -60,8 +66,6 @@
   }
 
   .pieChart > img {
-    display: block;
-    max-width: 100%;
     margin: 0 auto;
   }
 }
