--- a/src/sections/roadmap.module.css
+++ b/src/sections/roadmap.module.css
@@ -8,12 +8,14 @@
   position: absolute;
   top: 66px;
   left: 21px;
+  width: 320px;
 }
 
 .section > img:last-child {
   position: absolute;
   right: 65px;
   bottom: 173px;
+  width: 376px;
 }
 
 .title {
