--- a/src/sections/saleProgress.module.css
+++ b/src/sections/saleProgress.module.css
@@ -4,6 +4,31 @@
   justify-content: space-between;
 }
 
+.progress {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  align-items: center;
+}
+
+.progress > a {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  justify-content: center;
+  background-color: white;
+  height: 70px;
+  width: 200px;
+  border-radius: 35px;
+  color: #212121;
+  font-family: Syne;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  align-items: center;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.75);
+}
+
 @media only screen and (max-width: 1024px) {
   .section {
     flex-direction: column;
