--- a/src/sections/presale.module.css
+++ b/src/sections/presale.module.css
@@ -92,6 +92,11 @@
   .section::after {
     border-radius: 20px 0 0 20px;
   }
+
+  .section > img {
+    width: 400px;
+    bottom: 0;
+  }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -108,5 +113,9 @@
     font-size: 76px;
     padding-left: 20px;
     padding-right: 20px;
+  }
+
+  .section > img {
+    width: 350px;
   }
 }
